# ThalIR

./: .gitignore  Cargo.toml  README.md
crates/thalir/: Cargo.toml
crates/thalir-cli/: Cargo.toml
crates/thalir-cli/src/: main.rs
crates/thalir-core/: Cargo.toml
crates/thalir-core/examples/: basic_ir.rs  obfuscation_workflow.rs
crates/thalir-core/src/: block.rs  contract.rs  cursor.rs  format.rs  function.rs  inst_builder.rs  instructions.rs  ir_persist.rs  lib.rs  metadata.rs  source_location.rs  types.rs  values.rs
crates/thalir-core/src/analysis/: alias.rs  cache.rs  cfg.rs  control_flow.rs  cursor.rs  dataflow.rs  def_use.rs  dominator.rs  mod.rs  pass.rs  passes.rs  pattern.rs
crates/thalir-core/src/builder/: block_builder.rs  contract_builder.rs  cursor.rs  function_builder.rs  function_builder_cursor.rs  inst_builder.rs  ir_context.rs  ir_registry.rs  mod.rs
crates/thalir-core/src/codegen/: context.rs  lowering.rs  mod.rs  module.rs
crates/thalir-core/src/extensions/: crypto.rs  evm.rs  mod.rs  storage.rs
crates/thalir-core/src/obfuscation/: deobfuscator.rs  mapping_store.rs  mod.rs  name_obfuscator.rs  pass.rs  string_sanitizer.rs
crates/thalir-core/src/tests/: arithmetic_tests.rs  builder_api_tests.rs  call_tests.rs  contract_tests.rs  control_flow_tests.rs  cryptographic_tests.rs  event_tests.rs  memory_tests.rs  mod.rs  storage_tests.rs  type_tests.rs
crates/thalir-core/tests/: builder_tests.rs  cranelift.rs  obfuscation_integration.rs
crates/thalir-emit/: Cargo.toml
crates/thalir-emit/src/: annotated_ir_emitter.rs  config.rs  emitter.rs  ir_formatter_base.rs  lib.rs  output.rs  thalir_emitter.rs
crates/thalir-emit/tests/: annotated_emitter_test.rs  test_stdout_capture.rs
crates/thalir-parser/: Cargo.toml
crates/thalir-parser/examples/: parse_file.rs
crates/thalir-parser/src/: annotations.rs  grammar.pest  lib.rs
crates/thalir-parser/tests/: cranelift_compat.rs  llm_extensions.rs  parser_roundtrip.rs  thalir_ir.rs  validate_against_cli.rs
crates/thalir-transform/: Cargo.toml
crates/thalir-transform/src/: lib.rs
crates/thalir-transform/src/solidity_to_ir/: context.rs  control_flow_builder.rs  control_flow_cursor.rs  errors.rs  expression_transformer.rs  mod.rs  structural_transformer.rs  structural_transformer_cursor.rs  tests.rs  type_resolver.rs
crates/thalir/src/: lib.rs
