[workspace]
resolver = "2"
members = [
    "crates/thalir-core",
    "crates/thalir-emit",
    "crates/thalir-parser",
    "crates/thalir-transform",
    "crates/thalir",
    "crates/thalir-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Gianluca Brigandi <gbrigand@gmail.com>"]
license = "MPL-2.0"
repository = "https://github.com/tameshi-dev/thalir"
homepage = "https://github.com/tameshi-dev/thalir"
documentation = "https://docs.rs/thalir"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
pest = "2.7"
pest_derive = "2.7"
pretty_assertions = "1.4"
insta = "1.34"
walkdir = "2.5"
