[package]
name = "thalir-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Core IR types and builders for ThalIR smart contract analysis"
keywords = ["solidity", "compiler", "ir", "ssa", "cranelift"]
categories = ["compilers", "development-tools"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
cranelift = "0.113.1"
cranelift-codegen = { version = "0.113.1", features = ["x86", "arm64"] }
cranelift-frontend = "0.113.1"
cranelift-module = "0.113.1"
cranelift-native = "0.113.1"
cranelift-reader = "0.113.1"
cranelift-object = "0.113.1"
cranelift-entity = "0.113.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
indexmap = { version = "2.0", features = ["serde"] }
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
tree-sitter = "0.25"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.8"
